WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187367
REGRESSION: ASSERT under WebAutomationSessionProxy::computeElementLayout when elementInViewClientCenterPoint returns nullopt
https://bugs.webkit.org/show_bug.cgi?id=187367
Summary
REGRESSION: ASSERT under WebAutomationSessionProxy::computeElementLayout when...
Blaze Burg
Reported
2018-07-05 15:24:56 PDT
Seems to be fallout of the recent change to make std::optional more strict.
Attachments
Patch
(1.96 KB, patch)
2018-07-05 15:27 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-07-05 15:25:16 PDT
<
rdar://problem/41861346
>
Blaze Burg
Comment 2
2018-07-05 15:27:56 PDT
Created
attachment 344373
[details]
Patch
WebKit Commit Bot
Comment 3
2018-07-05 16:17:47 PDT
Comment on
attachment 344373
[details]
Patch Clearing flags on attachment: 344373 Committed
r233548
: <
https://trac.webkit.org/changeset/233548
>
WebKit Commit Bot
Comment 4
2018-07-05 16:17:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug