REGRESSION: ASSERT under WebAutomationSessionProxy::computeElementLayout when elementInViewClientCenterPoint returns nullopt https://bugs.webkit.org/show_bug.cgi?id=187367 <rdar://problem/41861346>

Reviewed by Timothy Hatcher.

* WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::computeElementLayout):
There's no reason to unwrap this optional, as the IPC argument type is std::optional<IntPoint>.


Canonical link: https://commits.webkit.org/202627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233548 268f45cc-cd09-0410-ab3c-d52691b4dbfc